--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-
   <title>&lt;3 Japan </title>
+  <link rel="stylesheet" type="text/css" href="./bower_components/normalize.css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="./bower_components/typeplate-starter-kit/css/typeplate.css">
+
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <link rel="stylesheet" type="text/css" href="node_modules/cutestrap/dist/css/cutestrap.min.css" />
 </head>
 <body>
 
